[package]
name = "dhf_filer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dircpy = "0.3.14"
eframe = "0.21.3"
egui = "0.21.0"
env_logger = "0.10.0"
fs_extra = "1.3.0"
regex = "1.8.0"
walkdir = "2.3.3"
